<?php declare(strict_types=1);
namespace Kepawni\Twilted;

/**
 * Represents an identifier for an entity (or an aggregate).
 */
interface EntityIdentifier extends Equatable, Foldable
{
}
