@startuml
!define trait <<(T, #ddbb99)>>
hide empty members
package Kepawni\Twilted {
    interface DomainEvent
    interface EntityHistory
    interface EntityIdentifier
    interface Equatable
    interface EventStream
    interface Repository
    abstract AggregateRoot
}
package Kepawni\Twilted\Basic {
    class AggregateUuid {
        -uuid:UuidInterface
        -__construct(:UuidInterface)
        {static} +createRandom():self
        {static} +unfold(:string):Foldable
        +equals(:mixed):bool
        +fold():string
    }
    class ImmutableValue {
        +<<name>>:mixed {readonly}
        #init(:string, :mixed):void
        +equals(:mixed):bool
        +with<<Name>>(:mixed):ImmutableValue
    }
    class SimpleAggregateHistory {
        -events:EventStream
        -id:EntityIdentifier
        +__construct(:EntityIdentifier, :EventStream)
        +getId():EntityIdentifier
        +getIterator():Traversable<DomainEvent>
    }
    abstract SimpleCommandHandler {
        +__construct(:Repository)
        #loadFromRepository(:EntityIdentifier):EventSourcedEntity
        #saveToRepository(:IdentifiableEventSourcedEntity):void
    }
    class SimpleDomainEvent {
        -entityId:EntityIdentifier
        -payload:EventPayload
        -recordedOn:DateTimeInterface
        +__construct(:EventPayload, :EntityIdentifier, :DateTimeInterface)
        +getId():EntityIdentifier
        +getPayload():EventPayload
        +getRecordedOn():DateTimeInterface
    }
    class SimpleEventStream {
        -events:array
        +__construct(:array)
        +getIterator():Traversable<DomainEvent>
    }
    class SimpleRepository
    {
        -entityClass:string|EventSourcedEntity
        -eventBus:EventBus
        -eventStore:EventStore
        -historyClass:string|EntityHistory
        +__construct(:string, :EventBus, :EventStore, :string=SimpleAggregateHistory::class)
        +load(:EntityIdentifier):EventSourcedEntity
        +save(:IdentifiableEventSourcedEntity):void
    }
    class EqualsUsesWindUp trait {
        +equals(:mixed):bool
    }
    class ApplyCallsWhenMethod trait {
        #apply(:DomainEvent):void
        {abstract} #when<<PayloadType>>(:EventPayload):void
    }
    class GetRecordedEventsIsConfigurable trait {
        {static} #eventStreamClass = SimpleEventStream::class;
        #recordedEvents = [];
        +getRecordedEvents():EventStream
    }
    class IdentificationIsTrivial trait {
        -id:EntityIdentifier;
        #__construct(:EntityIdentifier)
        +getId():EntityIdentifier
    }
    class ReconstituteFromIsSimple trait {
        {abstract} #__construct(:EntityIdentifier)
        {static} +reconstituteFrom(:EntityHistory):EventSourcedEntity
    }
    class RecordThatUsesConfigurableFactories trait {
        {static} #dateTimeClass = DateTimeImmutable::class
        {static} #domainEventClass = SimpleDomainEvent::class
        {static} #timeZoneClass = DateTimeZone::class
        #recordedEvents = []
        {abstract} +getId():EntityIdentifier
        {abstract} #apply(:DomainEvent):void
        #createDateTimeInterfaceForNow():DateTimeInterface
        #createDomainEvent(:EventPayload, :DateTimeInterface):SimpleDomainEvent
        #recordThat(:EventPayload):void
    }
    abstract SimpleAggregateRoot

    EntityIdentifier ^.. AggregateUuid
    Equatable ^.. ImmutableValue
    EntityHistory ^.. SimpleAggregateHistory
    EventStream ^.. SimpleEventStream
    DomainEvent ^.. SimpleDomainEvent
    Repository ^.. SimpleRepository
    AggregateRoot ^-- SimpleAggregateRoot
    ApplyCallsWhenMethod --* SimpleAggregateRoot
    GetRecordedEventsIsConfigurable --* SimpleAggregateRoot
    IdentificationIsTrivial --* SimpleAggregateRoot
    ReconstituteFromIsSimple --* SimpleAggregateRoot
    RecordThatUsesConfigurableFactories --* SimpleAggregateRoot

    EqualsUsesWindUp -[hidden]- ApplyCallsWhenMethod
    ApplyCallsWhenMethod -[hidden]- GetRecordedEventsIsConfigurable
    GetRecordedEventsIsConfigurable -[hidden]- IdentificationIsTrivial
    IdentificationIsTrivial -[hidden]- ReconstituteFromIsSimple
    ReconstituteFromIsSimple -[hidden]- RecordThatUsesConfigurableFactories

    Repository -[hidden]- EntityHistory
    EntityHistory -[hidden]- EntityIdentifier
    EntityIdentifier -[hidden]- Equatable
    Equatable -[hidden]- EventStream
    EventStream -[hidden]- DomainEvent
    DomainEvent -[hidden]- AggregateRoot

    SimpleRepository -[hidden]- SimpleAggregateHistory
    SimpleAggregateHistory -[hidden]- AggregateUuid
    AggregateUuid -[hidden]- ImmutableValue
    ImmutableValue -[hidden]- SimpleEventStream
    SimpleEventStream -[hidden]- SimpleDomainEvent
    SimpleDomainEvent -[hidden]- SimpleAggregateRoot
    RecordThatUsesConfigurableFactories -[hidden]- SimpleCommandHandler
    EqualsUsesWindUp -[hidden]- RecordThatUsesConfigurableFactories
}
@enduml
